# up-rs

./: Cargo.toml  LICENSE  README.md
src/: api_client.rs  api_endpoints.rs  lib.rs  models.rs  query_builder.rs  request_sender.rs  types.rs
tests/: tests.rs
tests/example_json/: list_accounts.json  list_categories.json  list_tags.json  list_transactions.json
