[package]
name = "uprs"
description = "A wrapper for the Up Bank API."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/nicholas-russell/uprs"
repository = "https://github.com/nicholas-russell/uprs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.81"
chrono = {version ="0.4.19", features = ["serde"]}
async-trait = "0.1.56"
strum_macros = "0.24"